plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

bootJar {
	manifest {
		attributes 'Start-Class': 'com.sportworld.bin.web.Main'
	}
	archiveName = 'sport-world.jar'
}


dependencies {
	implementation 'org.springframework.kafka:spring-kafka'

	implementation 'com.google.code.gson:gson:2.9.0'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'io.jsonwebtoken:jjwt-root:0.11.5'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'

	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	implementation("com.squareup.okhttp3:okhttp:4.10.0")

	implementation 'org.apache.httpcomponents:httpcore:4.4.15'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'

	runtimeOnly 'mysql:mysql-connector-java'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	testImplementation 'junit:junit:4.13.2'
	testImplementation 'org.mockito:mockito-core:4.6.1'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'


}

tasks.named('test') {
	useJUnitPlatform()
}
